--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,5 +22,5 @@
   </ul>
 </div>
 <footer class="footer">
-  Made with <a href="https://netlify.com"><img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1646714899/netliheart_ezlkim.svg" alt="Netlify Logo" /></a> for you!
+  Powered by <a href="http://adrikikicp-development.ml"><img src="https://vitraclient.ml/logo.png" alt="Vitra Logo" /></a> Adrikikicp Development & Vitra Web Services
 </footer>
